test/TestPhases/typechecker/invalid/initOpaqueWrong.blc
import M "../imports/moduleToImport"

module

activity X()
    await true
    var t: M.T = {} // error: T not visible
end